fix: picker z-index

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -264,3 +264,11 @@ body {
 .ant-select-dropdown {
 	z-index: 3000000000000 !important;
 }
+
+.ant-picker-dropdown {
+	z-index: 3000000000000 !important;
+}
+
+.ant-popover {
+	z-index: 3000000000000 !important;
+}
